# KidneyStoneAI

./: .gitattributes  .gitignore  MEDICAL_AI_MODELS_INSTALLATION.md  README.md  azure_ml_integration.sh  comprehensive-test-suite.js  install_medical_ai_models.sh  requirements.txt  test-dataset.json
backend/: .env.example  Cargo.toml  download_kaggle_images.py
backend/src/: agents.rs  auth.rs  azure_client.rs  azure_ml.rs  database.rs  imaging.rs  main.rs  ml_models.rs  models.rs  rag.rs
docs/: AZURE_ML_SETUP.md
frontend/: .env  .env.example  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: ClinicalAnalysisAggregator.tsx  Dashboard.tsx  EMRData.tsx  PatientImagingResults.tsx  TestingInterface.tsx  VoiceEnabledImageDisplay.tsx  theme-provider.tsx
frontend/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  tabs.tsx
frontend/src/config/: api.ts
frontend/src/lib/: utils.ts
frontend/src/services/: voiceService.ts
