[package]
name = "kidney-stone-api"
version = "0.1.0"
edition = "2021"
authors = ["Greg Katz <gregory.katz@microsoft.com>"]
description = "Kidney Stone Research Platform - AI-powered medical analysis system backend"
license = "MIT"
repository = "https://github.com/gregnatkatz/KidneyStoneAI"

# System Requirements:
# Ubuntu/Debian: sudo apt install pkg-config libssl-dev build-essential
# macOS: brew install pkg-config openssl  
# Windows: Install Visual Studio Build Tools and OpenSSL

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
chroma-rs = "0.1"
jsonwebtoken = "9.0"
bcrypt = "0.15"
azure_core = "0.19"
azure_identity = "0.19"
image = "0.24"
imageproc = "0.23"
base64 = "0.21"

[build-dependencies]
# Required for OpenSSL linking on some systems
pkg-config = "0.3"

[profile.release]
# Optimized release build for production deployment
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Development profile with faster compilation
opt-level = 0
debug = true
overflow-checks = true
